[package]
name = "valerie"
version = "0.1.1"
authors = ["Emmanuel Antony <emmanuelantony2000@gmail.com>"]
description = "Rust font-end framework for building web apps."
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/emmanuelantony2000/valerie"
homepage = "https://github.com/emmanuelantony2000/valerie"
keywords = ["wasm", "webassembly", "frontend", "framework", "web"]
categories = ["wasm", "gui", "web-programming", "no-std"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
debug = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.64"
wasm-bindgen-futures = "0.4.14"
console_error_panic_hook = { version = "0.1.6", optional = true }
wee_alloc = { version = "0.4.5" }
futures-intrusive = "0.3.1"
parking_lot = "0.11.0"
crossbeam = "0.7.3"

[dependencies.web-sys]
version = "0.3.41"
features = [
    "Window",
    "Document",
    "Node",
    "Element",
    "HtmlElement",
    "HtmlDataElement",
    "HtmlInputElement",
    "Text",
    "HtmlCollection",
]

[dev-dependencies]
wasm-bindgen = "0.2.64"
wasm-bindgen-test = "0.3.14"
wasm-timer = "0.2.4"

[profile.release]
lto = true
