[package]
name = "hello_world"
version = "0.1.0"
authors = ["Emmanuel Antony <emmanuelantony2000@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
valerie = { path = "../../../valerie" }
wasm-bindgen = "0.2.62"
futures = { version = "0.3.5", features = ["alloc"] }
spin = "0.5.2"

[profile.release]
lto = true
opt-level = 3
