[package]
name = "hello_world"
version = "0.1.0"
authors = ["Emmanuel Antony <emmanuelantony2000@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
valerie = { path = "../../../valerie" }
wasm-bindgen = "0.2.62"
wasm-bindgen-futures = "0.4.12"
futures-intrusive = "0.3.1"

[profile.release]
lto = true
opt-level = 3
