[package]
name = "tictactoe"
version = "0.1.0"
authors = ["Emmanuel Antony <emmanuelantony2000@gmail.com>", "Alister Lee <alilee@shortepic.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
valerie = { path = "../../../valerie" }
futures-intrusive = "0.3.1"
lazy_static = "1.4"
log = "0.4"
wasm-logger = "0.2"
console_error_panic_hook = "0.1"
wasm-bindgen = "0.2.67"
wasm-bindgen-futures = "0.4.17"
js-sys = "0.3.44"
serde = { version = "1.0.115", features = ["derive"] }
serde_json = "1.0.57"

[profile.release]
lto = true
opt-level = 3

[dependencies.web-sys]
version = "0.3.44"
features = [
#    "Window",
#    "Document",
     "Node",
#    "Element",
#    "HtmlElement",
#    "HtmlDataElement",
#    "Text",
#    "EventTarget",
]